--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link href="http://developer.github.com/css/uv_active4d.css" rel="stylesheet" type="text/css" />
     <link href="http://developer.github.com/shared/css/documentation.css" media="screen" rel="stylesheet" type="text/css">
     <link href="http://developer.github.com/shared/css/pygments.css" media="screen" rel="stylesheet" type="text/css">
+    <link href="http://yandex.st/highlightjs/7.3/styles/default.min.css" rel="stylesheet">
+    <script src="http://yandex.st/highlightjs/7.3/highlight.min.js" type="text/javascript"></script>
     <script src="http://developer.github.com/shared/js/jquery.js" type="text/javascript"></script>
     <script src="http://developer.github.com/shared/js/documentation.js" type="text/javascript"></script>
     <script src="/socket.io/socket.io.js" type="text/javascript"></script>
