--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <html>
   <head>
     <title>Markdown Rendering via GitHub API</title>
-    <link href="http://developer.github.com/css/reset.css" rel="stylesheet" type="text/css" />
-    <link href="http://developer.github.com/css/960.css" rel="stylesheet" type="text/css" />
-    <link href="http://developer.github.com/css/uv_active4d.css" rel="stylesheet" type="text/css" />
-    <link href="http://developer.github.com/shared/css/documentation.css" media="screen" rel="stylesheet" type="text/css">
-    <link href="http://developer.github.com/shared/css/pygments.css" media="screen" rel="stylesheet" type="text/css">
+    <link href="/styles/github1.css" rel="stylesheet" type="text/css" />
+    <link href="/styles/github2.css" rel="stylesheet" type="text/css" />
     <link href="http://yandex.st/highlightjs/7.3/styles/default.min.css" rel="stylesheet">
     <script src="http://yandex.st/highlightjs/7.3/highlight.min.js" type="text/javascript"></script>
     <script src="http://developer.github.com/shared/js/jquery.js" type="text/javascript"></script>
@@ -27,7 +24,21 @@
   <body class="api">
     <div id="remain"></div>
     <div id="wrapper">
-      <div class="content">
+      <div class="hentry">
+        <div id="js-repo-pjax-container" class="container context-loader-container" data-pjax-container="">
+          <div id="slider">
+            <div class="frames">
+              <div class="frame"> 
+                <div id="readme" class="clearfix announce instapaper_body md">
+                  <article class="markdown-body entry-content" itemprop="mainContentOfPage">
+                    <div class="content">
+                    </div>
+                  </article>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
